Changed Talks and Publications
Added all talks and publications

--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -4,7 +4,7 @@ title: "Talks and presentations"
 permalink: /talks/
 author_profile: true
 ---
-
+<!--
 {% if site.talkmap_link == true %}
 
 <p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
@@ -14,3 +14,36 @@ author_profile: true
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
+-->
+
+<ol>
+  <li><b>Debabrata Auddya</b>, Harrah R. Newman, John M. Peloquin, <u> Dawn M. Elliott</u>. Parametric sensitivity analysis of disc mechanics using a nonlinear biphasic and fiber-reinforced finite element analysis (Poster), ISSLS 2025, Atlanta, GA </li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Harrah R. Newman, John M. Peloquin, Dawn M. Elliott. Parametric sensitivity analysis of disc mechanics using a nonlinear biphasic and fiber-reinforced finite element analysis, DCMR/CBER Symposium 2025, University of Delaware, Newark, DE </li>
+  
+  <li><b><u>Debabrata Auddya</u></b>, Shiva Rudraraju. A mechano-chemical continuum framework for modeling axonal deformation and neuronal-ECM molecular pathways underlying traumatic brain injury (Poster), PANTHER Conference 2023, Sept 23-25, Madison, WI </li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Shiva Rudraraju. A mechano-chemical continuum framework for modeling axonal deformation and neuronal-ECM molecular pathways underlying traumatic brain injury, SES 2023, Oct 8-11, Minneapolis, MN </li>
+
+  <li><u>Session Chair</u>, Cell Mechanics and Mechanobiology, USNCCM17 2023, July 23-27, Albuquerque, NM </li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Shiva Rudraraju. A mechano-chemical continuum framework for modeling axonal deformation and neuronal-ECM molecular pathways underlying traumatic brain injury, USNCCM17 2023, July 23-27, Albuquerque, NM </li>
+ 
+  <li><u>Session Chair</u>, Modeling of Complex Fluids and Applications, SES 2022, Oct 15-19, College Station, TX</li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Rahul Gulati, Shiva Rudraraju. Mechanics and microstructure underlying axonal deformation of neurons and neuronal injury (Invited Talk), SES 2022, Oct 15-19, College Station, TX</li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Rahul Gulati, Shiva Rudraraju. Mechanics and microstructure underlying axonal deformation of neurons and neuronal injury (Poster), Panther Conference 2022, Sept 23-25, Madison, WI</li>
+   
+  <li><b><u>Debabrata Auddya</u></b>, Rahul Gulati, Shiva Rudraraju. Mechanics and microstructure underlying axonal deformation of neurons and neuronal injury, USNCTAM19 2022, June 19-25, Austin, TX</li>
+
+  <li><b><u>Debabrata Auddya</u></b>,Xiaoxuan Zhang, Rahul Gulati, Ritvik Vasan, Krishna Garikipati, Padmini Rangamani, and Shiva Rudraraju. Biomembranes undergo complex, non-axisymmetric deformations governed by Kirchhoff-Love kinematics and revealed by a three dimensional computational framework. Graduate Engineering Mechanics Seminar(GEMS) 2021, Oct 20, Madison, WI</li>
+
+  <li><b><u>Debabrata Auddya</u></b>,Xiaoxuan Zhang, Rahul Gulati, Ritvik Vasan, Krishna Garikipati, Padmini Rangamani, and Shiva Rudraraju. Biomembranes undergo complex, non-axisymmetric deformations governed by Kirchhoff-Love kinematics and revealed by a three dimensional computational framework. USNCCM16 2021 (Virtual), July 28-31, Chicago, IL</li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Jiahao Jiang, Krishna Garikipati, Shiva Rudraraju, 2019. A diffuse interface framework for modelling the evolution of multi-cell aggregates as a soft packing problem driven by the growth and division of cells, USNCCM15 2019, July 28-31, Austin, TX</li>
+
+  <li><b><u>Debabrata Auddya</u></b>, Jiahao Jiang, Krishna Garikipati, Shiva Rudraraju, 2019. A diffuse interface framework for modelling the evolution of multi-cell aggregates as a soft packing problem driven by the growth and division of cells, Midwest Mechanics Symposium 2019, March 9-10, Madison, WI</li>
+
+  <li><u>Bradley J. Roth</u>, <b>Debabrata Auddya</b>. A mathematical model of mechanotransduction for morphogenesis, Mechanics in Morphogenesis 2018 ,Princeton Center for Theoretical Science - Princeton University, February 21-23, Princeton, NJ</li>
+</ol>
