--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -17,6 +17,8 @@ author_profile: true
 -->
 
 <ol>
+  <li>Pratuysa Kar, <b>Debabrata Auddya</b>, <u>Shiva Rudraraju</u></li>. Multiphysics of neuronal injury - Modeling mechanical deformation induced by electromagnetic waves, SES 2025, Atlanta, GA </li>
+
   <li><b>Debabrata Auddya</b>, Harrah R. Newman, John M. Peloquin, <u> Dawn M. Elliott</u>. Parametric sensitivity analysis of disc mechanics using a nonlinear biphasic and fiber-reinforced finite element analysis (Poster), ISSLS 2025, Atlanta, GA </li>
 
   <li><b><u>Debabrata Auddya</u></b>, Harrah R. Newman, John M. Peloquin, Dawn M. Elliott. Parametric sensitivity analysis of disc mechanics using a nonlinear biphasic and fiber-reinforced finite element analysis, DCMR/CBER Symposium 2025, University of Delaware, Newark, DE </li>
