--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -17,7 +17,7 @@ author_profile: true
 -->
 
 <ol>
-  <li>Pratuysa Kar, <b>Debabrata Auddya</b>, <u>Shiva Rudraraju</u></li>. Multiphysics of neuronal injury-Modeling mechanical deformation induced by electromagnetic waves, SES 2025, Atlanta, GA </li>
+  <li>Pratuysa Kar, <b>Debabrata Auddya</b>, <u>Shiva Rudraraju</u>. Multiphysics of neuronal injury - Modeling mechanical deformation induced by electromagnetic waves, SES 2025, Atlanta, GA </li>
 
   <li><b>Debabrata Auddya</b>, Harrah R. Newman, John M. Peloquin, <u> Dawn M. Elliott</u>. Parametric sensitivity analysis of disc mechanics using a nonlinear biphasic and fiber-reinforced finite element analysis (Poster), ISSLS 2025, Atlanta, GA </li>
 
