--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -17,6 +17,8 @@ author_profile: true
 -->
 
 <ol>
+  <li><b><u>Debabrata Auddya</u></b>, Harrah R. Newman, John M. Peloquin, Edward J. Vresilovic, Dawn M. Elliott. Material property sensitivity of disc mechanics under physiological loading: A nonlinear finite element approach (Poster), ORS 2026, Charlotte, NC (accepted) </li>
+  <li><b><u>Debabrata Auddya</u></b>, Harrah R. Newman, John M. Peloquin, Edward J. Vresilovic, Dawn M. Elliott. Material property sensitivity of disc mechanics under physiological loading: A nonlinear finite element approach (Poster), PSRS 2025, Newark, DE </li>
   <li>Pratuysa Kar, <b>Debabrata Auddya</b>, <u>Shiva Rudraraju</u>. Multiphysics of neuronal injury - Modeling mechanical deformation induced by electromagnetic waves, SES 2025, Atlanta, GA </li>
 
   <li><b>Debabrata Auddya</b>, Harrah R. Newman, John M. Peloquin, <u> Dawn M. Elliott</u>. Parametric sensitivity analysis of disc mechanics using a nonlinear biphasic and fiber-reinforced finite element analysis (Poster), ISSLS 2025, Atlanta, GA </li>
